--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,11 @@
 }
 
 .slider__img {
-    flex-grow: 1;    
-    text-align: center;
+    flex-grow: 1; 
+    display: flex;   
+    justify-content: center;
     height: 100%;
+    flex-wrap: wrap;
 }
 
 .slider__arrow {
@@ -26,6 +28,18 @@
 
 img {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 30px);
     object-fit: contain;
+}
+
+.bullet {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    background-color: #000;
+    border-radius: 50%;
+}
+
+.active {
+    background-color: red;
 }
