--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,47 @@
     margin: 0;
 }
 /* button */
+button {
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+svg {
+    width: 4rem;
+}
+svg polygon {
+    stroke: #000;
+}
+svg path {
+    fill: #fff;
+    stroke: #000;
+}
+.btn {
+
+}
 /* typo */
+/* common */
+body {
+    background-color: #fff;
+}
 /* slider */
 .slider {
     display: flex;
+    flex-wrap: wrap;
     height: 100vh;
     align-items: center;
+    padding: 2rem;
+    width: 100%;
 }
 
 .slider__img {
     flex-grow: 1; 
     display: flex;   
     justify-content: center;
-    height: 100%;
+    align-items: center;
+    height: 80%;
     flex-wrap: wrap;
 }
 
@@ -28,18 +56,40 @@
 
 img {
     width: 100%;
-    height: calc(100% - 30px);
+    height: 80%;
     object-fit: contain;
+    border: 1px solid #000;
+    border-radius: 50%;
 }
 
+.img__bullets {
+    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: .5rem;
+    width: 100%;
+    border-radius: 10px;
+}
 .bullet {
     display: inline-block;
     height: 20px;
     width: 20px;
-    background-color: #000;
+    border: 1px solid #000;
     border-radius: 50%;
+    margin: 0 .5rem;
+    position: relative;
+    cursor: pointer;
 }
 
-.active {
-    background-color: red;
+.active:after {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 100%;
+    left: 8px;
+    top: 0;
+    background-color: #000;
 }
+
+
